--- a/styles.css
+++ b/styles.css
@@ -3,17 +3,85 @@
 :root{
     --primary-color: #E8BAEC;
     --background-color:#F6E9F9;
+    --text-color:#c4c4c4;
     --black: #0F0A0A;
     --white: #ffffff ;
-    --font-family: 'Oxygen', sans-serif;
+    --link-color:#509ee3;
+    --font: 'Oxygen', sans-serif;
+    --max-width:1370px;
 }
 
 
-
 /*****  Reseteo *****/
+  
+html{
+    font-size: 16px;
+    font-family: var(--font);
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+}
 
+*,
+*::after,
+*::before{
+    box-sizing: inherit;
+}
 
+body{
+    background-color: var(--background-color);
+    margin: 0;
+    overflow-x: hidden;
+    padding: 0;
+    color: var(--text-color);
+}
 
+a{
+    color: var(--link-color);
+    transition: all 0.5s ease-in-out;
+}
+
+a:hover{
+    opacity: 0.75%;
+}
+
+h1{
+    font-size: 2rem;
+    margin: 0;
+}
+
+h2{
+    font-size: 1.5rem;
+    margin: 0;
+}
+
+h3{
+    font-size: 1.25rem;
+    margin: 0;
+}
+
+h4{
+    font-size: 1rem;
+    margin:0;
+}
+
+h5{
+    font-size: 0.85rem;
+    margin: 0;
+}
+
+h6{
+    font-size: 0.7rem;
+    margin: 0;
+}
+
+img{
+    max-width: 100%;
+    height: auto;
+}
+
+p{
+    line-height: 1.6rem;
+}
 
 /******** Components *******/
 
@@ -22,6 +90,16 @@
 
 /******** utilities *************/
 
+
+.container{
+    margin-left: auto;
+    margin-right: auto;
+    max-width: var(--max-width);
+}
+
+.none{
+    display: none;
+}
 
 
 /******* Syte Styles *******/
